---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Features:
    - Removal of unapproved ghosts using deconstruction planner can now be undone using standard game controls (Control + Z).
  Bugfixes:
    - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.
    - Do not auto-approve ghosts when using selection tools that place entities that are not selectable in the game. Those are usually used for special purposes by mods that build them. Fixes issues with selection tool from Tapeline mod approving the ghosts when dragged over them.
    - Fixed unselectable unapproved ghost entities when player invokes undo on a removed unapproved ghost entity.
    - Fixed accidental approvals when placing ghosts by quickly dragging across the screen.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-10-17
  Features:
    - Construction planner tool now has a hotkey (default Alt + C)
    - Auto-approval mod setting now has a toolbar shortcut and a hotkey (default Shift + Alt + C)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-10-09
  Bugfixes:
    - Fixed an issue with copying/blueprinting of ghost circuit connection data
    - Fixed a compatibility issue between this mod and the Creative Mod instant blueprint feature
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-10-05
  Bugfixes:
    - Fixed a crash introduced by the previous version
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-10-04
  Bugfixes: