@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Features:
     - Removal of unapproved ghosts using deconstruction planner can now be undone using standard game controls (Control + Z).
+    - Removal of unapproved ghosts using cut-and-paste tool can now be undone using standard game controls (Control + Z).
   Bugfixes:
     - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.
     - Do not auto-approve ghosts when using selection tools that place entities that are not selectable in the game. Those are usually used for special purposes by mods that build them. Fixes issues with selection tool from Tapeline mod approving the ghosts when dragged over them.
